2014-01-22  Simson Garfinkel  <simsong@Dance.local>

	* sceadan_processblk.c (process_container): removed non-standard fd_t.
	
