@@ -1,5 +1,9 @@
+2014-01-23  Simson Garfinkel  <simsong@Dance.local>
+
+	* sceadan.c (process_container): removed outs[] from entire code base.
+
 2014-01-22  Simson Garfinkel  <simsong@Dance.local>
 
 	* sceadan_processblk.c (process_container): removed non-standard fd_t.
-	
+
 
